--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&family=Rancho&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/ 
