Changed the font embedding

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,900&family=Rancho&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Anaheim&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
     <title>React App</title>
