updated the title

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       href="https://fonts.googleapis.com/css2?family=Anaheim&family=Roboto:wght@100&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Ven Cars</title>
     <style>
       /* http://meyerweb.com/eric/tools/css/reset/ 
      v2.0 | 20110126
